--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,114 @@ html {
 }
 
 body {
+  background-color: #fafbfc;
   margin: 0;
   min-height: 100%;
+}
+
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  border-bottom: thin solid lightgray;
+  box-shadow: 0.5rem 0.5rem 2rem lightgray;
+  padding: 0.5rem;
+  background-color: rgba(255, 255, 255, 60%);
+  line-height: 2rem;
+}
+
+header a {
+  color: black;
+  text-decoration: none;
+}
+
+header a:hover {
+  text-decoration: underline;
+}
+
+nav {
+  margin-right: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+nav.left {
+  justify-content: space-evenly;
+}
+
+nav p {
+  flex-grow: 0.5;
+}
+
+.right {
+  text-align: right;
+}
+
+nav img {
+  margin: 0.5rem;
+}
+
+.mobile {
+  display: none;
+}
+
+div {
+  margin-top: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.image {
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+  grid-area: image;
+  width: 18rem;
+  border: thin solid lightgray;
+  border-radius: 1rem;
+}
+
+.number {
+  grid-area: number;
+  color: gray;
+  margin-right: 0.5rem;
+}
+
+.name {
+  grid-area: name;
+  font-weight: bold;
+}
+
+.avatar {
+  grid-area: avatar;
+  width: 1.5rem;
+  justify-self: end;
+  align-self: center;
+}
+
+article {
+  margin: auto;
+  width: 18rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas:
+    'image image image image'
+    'number name . avatar';
+}
+
+hr {
+  margin: 1rem;
+  border: thin solid lightgray;
+}
+
+footer {
+  margin: 1rem;
+  color: gray;
+}
+
+@media only screen and (min-width: 50rem) {
+  .mobile {
+    display: flex;
+  }
 }
